--- a/pom.xml
+++ b/pom.xml
@@ -73,18 +73,18 @@
   </build>
  <repositories>
     <repository>
-      <id>mymaven-group</id>
+      <id>maven-group</id>
       <url>http://52.90.76.177:8081/repository/maven-group/</url>
     </repository>
   </repositories>
 
     <distributionManagement>
     <snapshotRepository>
-      <id>mymaven-snapshots</id>
+      <id>maven-snapshots</id>
       <url>http://52.90.76.177:8081/repository/maven-snapshots/</url>
     </snapshotRepository>
     <repository>
-      <id>mymaven-releases</id>
+      <id>maven-releases</id>
       <url>http://52.90.76.177:8081/repository/maven-releases/</url>
     </repository>
   </distributionManagement>
